--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           src="images/logo/page 2/djeen.png"
           alt="djeen"
         />
-        <p>Axtardığını <span class="main-purple">djeen</span>nən arzula</p>
+        <p>Axtardığını <span class="main-purple">djeen</span>dən arzula</p>
       </div>
       <!---------- Main Top Finish ---------->
       <!---------- Main Content Start ---------->
