--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
           src="images/logo/page 2/djeen.png"
           alt="djeen"
         />
-        <p>Axtardığını <span class="main-purple">djeen</span>dən arzula</p>
+        <p>Axtardığını <span class="primary-color">djeen</span>dən arzula</p>
       </div>
       <!---------- Main Top Finish ---------->
       <!---------- Main Content Start ---------->
       <div class="main-content">
         <h2>
           Məlumatlarını doldur və
-          <span class="main-purple">alış-verişə başla</span>
+          <span class="primary-color">alış-verişə başla</span>
         </h2>
 
         <form class="form">
