--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
                 <p>Əgər hesabın varsa <strong><a href="index.html">Daxil ol</a></strong>.</p>
 
 
-                <input class="btn-light" type="submit" value="Təsdiqlə">
+                <input class="btn-light" type="submit" value="Davam et">
 
             </form>
         </div>
