--- a/product-detail.html
+++ b/product-detail.html
@@ -1,271 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Djeen Web App</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="assets/css/style.css" />
+  <title>Djeen Web App</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-  </head>
+  <link rel="stylesheet" href="assets/css/style.css" />
 
-  <body>
-    <!---------- Product Detail ---------->
-    <div class="product-detail">
-      <!---------- Product Image ---------->
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="assets/images/product.png" alt="product" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/images/product.png" alt="product" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/images/product.png" alt="product" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/images/product.png" alt="product" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/images/product.png" alt="product" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/images/product.png" alt="product" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/images/product.png" alt="product" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/images/product.png" alt="product" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/images/product.png" alt="product" />
-          </div>
-        </div>
-        <div class="swiper-pagination"></div>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+</head>
+
+<body>
+  <!---------- Product Detail ---------->
+  <div class="product-detail">
+
+    <!---------- Menu ---------->
+    <div class="menu">
+      <div class="menu-item">
+        <img src="assets/images/icons/menu/kesfet.png" alt="kesfet" />
+        <p>kəşfet</p>
       </div>
-
-      <!---------- Product Signs ---------->
-
-      <!---------- Comment 💬---------->
-      <div class="product-signs">
-        <div class="product-comments sign-element">
-          <img
-            src="assets/images/icons/comment.png"
-            alt="comment"
-            class="img-comment image-element"
-          />
-          <span class="detail-sings">Şərhlər</span>
-        </div>
-
-        <!---------- Account 🆕---------->
-        <div class="product-account sign-element">
-          <img
-            src="assets/images/icons/add.png"
-            alt="account"
-            class="img-account image-element"
-          />
-          <span class="detail-sings">Hesabı izlə</span>
-        </div>
-
-        <!---------- Stars ⭐---------->
-        <div class="product-stars sign-element">
-          <img
-            src="assets/images/icons/star-on.png"
-            alt="stars"
-            class="img-stars image-element"
-          />
-          <img
-            src="assets/images/icons/star-on.png"
-            alt="stars"
-            class="img-stars image-element"
-          />
-          <img
-            src="assets/images/icons/star-on.png"
-            alt="stars"
-            class="img-stars image-element"
-          />
-          <img
-            src="assets/images/icons/star.png"
-            alt="stars"
-            class="img-stars image-element"
-          />
-          <img
-            src="assets/images/icons/star.png"
-            alt="stars"
-            class="img-stars image-element"
-          />
-        </div>
+      <div class="menu-item">
+        <img src="assets/images/icons/menu/reels.png" alt="reels" />
+        <p>reels</p>
       </div>
-      <div class="product-signs">
-        <!---------- Address 🗺️---------->
-        <div class="product-address sign-element">
-          <img
-            src="assets/images/icons/location.png"
-            alt="address"
-            class="img-address image-element"
-          />
-          <span class="detail-sings">Bakı</span>
-        </div>
-
-        <!---------- Basket 🧺---------->
-        <div class="product-basket sign-element">
-          <img
-            src="assets/images/icons/bag.png"
-            alt="basket"
-            class="img-basket image-element"
-          />
-          <span class="detail-sings">251</span>
-        </div>
-
-        <!---------- Heart 💟---------->
-        <div class="product-heart sign-element">
-          <img
-            src="assets/images/icons/favorite-off.png"
-            alt="heart"
-            class="img-heart image-element"
-          />
-          <span class="detail-sings">Sevimlilərə əlavə et</span>
-        </div>
+      <div class="menu-item">
+        <img src="assets/images/icons/menu/paylash.png" alt="paylash" />
+        <p>paylaş</p>
       </div>
-
-      <!---------- Product Content ---------->
-      <div class="product-info">
-        <div class="product-head">
-          <h2>Derimen</h2>
-          <div class="price">
-            <span class="old-price"><s>17.00</s></span>
-            <span class="current-price"><b>12.99 AZN</b></span>
-          </div>
-
-          <span class="discount"
-            >23%
-            <img src="assets/images/icons/down-arrow.png" alt="" />
-          </span>
-        </div>
-
-        <p>
-          Əl çantası, lüks və əl işi dəridən hazırlanmış şık bir aksesuar.
-          İstifadəsi rahat və praktik olan bu çanta, istədiyiniz əşyanızı
-          saxlamaq üçün mükəmməl bir seçimdir. Tərzi və rahatlığı bir arada
-          istəyənlər üçün idealdir.
-        </p>
+      <div class="menu-item">
+        <img src="assets/images/icons/menu/mesaj.png" alt="mesaj" />
+        <p>mesaj</p>
       </div>
-      <!---------- Product Form Input ---------->
-      <form action="" method="post">
-        <div class="input-container">
-          <textarea
-            rows="4"
-            placeholder="Məhsulun üzərinə yazdırmaq istədiyiniz yazını bura qeyd edin"
-          ></textarea>
-        </div>
-
-        <div class="input-container print-img">
-          <input
-            type="file"
-            accept="image/*"
-            id="imageInput"
-            name="image"
-            style="display: none"
-          />
-          <label for="imageInput" class="image-button text-center">
-            Məhsulun üzərinə çap etdirmək istədiyiniz şəkli bura daxil edin
-          </label>
-          <img style="width: 100%" src="" class="image-preview" />
-          <span class="change-image" style="display: none">
-            <a
-              class="change-image primary-color"
-              style="margin-top: 10px; text-align: end"
-              >Təmizlə</a
-            >
-          </span>
-        </div>
-
-        <div class="input-container">
-          <select name="product_address" id="product_address">
-            <option value="">Çatdırılma ünvanını seçin</option>
-          </select>
-        </div>
-
-        <input type="submit" class="btn-success" value="Sifarişi göndər" />
-      </form>
-
-      <!---------- Menu ---------->
-
-      <div class="menu">
-        <div class="discover">
-          <img src="assets/images/icons/menu/kesfet.png" alt="kesfet" />
-          <span class="menu-name">kəşfet</span>
-        </div>
-        <div class="reels">
-          <img src="assets/images/icons/menu/reels.png" alt="reels" />
-          <span class="menu-name">reels</span>
-        </div>
-        <div class="share">
-          <img src="assets/images/icons/menu/paylash.png" alt="paylash" />
-          <span class="menu-name">paylaş</span>
-        </div>
-        <div class="message">
-          <img src="assets/images/icons/menu/mesaj.png" alt="mesaj" />
-          <span class="menu-name">mesaj</span>
-        </div>
-        <div class="profile">
-          <img src="assets/images/icons/menu/profil.png" alt="profil" />
-          <span class="menu-name">profil</span>
-        </div>
+      <div class="menu-item">
+        <img src="assets/images/icons/menu/profil.png" alt="profil" />
+        <p>profil</p>
       </div>
     </div>
 
-    <!-- Swiper CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!--jQuery CDN-->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+    
+    <!---------- Product Image ---------->
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="assets/images/product.png" alt="product" />
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/product.png" alt="product" />
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/product.png" alt="product" />
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/product.png" alt="product" />
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/product.png" alt="product" />
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/product.png" alt="product" />
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/product.png" alt="product" />
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/product.png" alt="product" />
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/product.png" alt="product" />
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
 
-    <script>
-      //Swiper
-      var swiper = new Swiper(".mySwiper", {
-        slidesPerView: "auto",
-        centeredSlides: true,
-        spaceBetween: 10,
-        loop: true,
-      });
-    </script>
+    <!---------- Product Signs ---------->
 
-    <script>
-      $("#imageInput").on("change", function () {
-        $input = $(this);
-        if ($input.val().length > 0) {
-          fileReader = new FileReader();
-          fileReader.onload = function (data) {
-            $(".image-preview").attr("src", data.target.result);
-          };
-          fileReader.readAsDataURL($input.prop("files")[0]);
-          $(".image-button").css("display", "none");
-          $(".image-preview").css("display", "block");
-          $(".change-image").css("display", "block");
-        }
-      });
+    <!---------- Comment 💬---------->
+    <div class="product-signs">
+      <div class="product-comments sign-element">
+        <img src="assets/images/icons/comment.png" alt="comment" class="img-comment image-element" />
+        <span class="detail-sings">Şərhlər</span>
+      </div>
 
-      $(".change-image").on("click", function () {
-        $control = $(this);
-        $("#imageInput").val("");
-        $preview = $(".image-preview");
-        $preview.attr("src", "");
-        $preview.css("display", "none");
-        $control.css("display", "none");
-        $(".image-button").css("display", "block");
-      });
-    </script>
-  </body>
+      <!---------- Account 🆕---------->
+      <div class="product-account sign-element">
+        <img src="assets/images/icons/add.png" alt="account" class="img-account image-element" />
+        <span class="detail-sings">Hesabı izlə</span>
+      </div>
+
+      <!---------- Stars ⭐---------->
+      <div class="product-stars sign-element">
+        <img src="assets/images/icons/star-on.png" alt="stars" class="img-stars image-element" />
+        <img src="assets/images/icons/star-on.png" alt="stars" class="img-stars image-element" />
+        <img src="assets/images/icons/star-on.png" alt="stars" class="img-stars image-element" />
+        <img src="assets/images/icons/star.png" alt="stars" class="img-stars image-element" />
+        <img src="assets/images/icons/star.png" alt="stars" class="img-stars image-element" />
+      </div>
+    </div>
+    <div class="product-signs">
+      <!---------- Address 🗺️---------->
+      <div class="product-address sign-element">
+        <img src="assets/images/icons/location.png" alt="address" class="img-address image-element" />
+        <span class="detail-sings">Bakı</span>
+      </div>
+
+      <!---------- Basket 🧺---------->
+      <div class="product-basket sign-element">
+        <img src="assets/images/icons/bag.png" alt="basket" class="img-basket image-element" />
+        <span class="detail-sings">251</span>
+      </div>
+
+      <!---------- Heart 💟---------->
+      <div class="product-heart sign-element">
+        <img src="assets/images/icons/favorite-off.png" alt="heart" class="img-heart image-element" />
+        <span class="detail-sings">Sevimlilərə əlavə et</span>
+      </div>
+    </div>
+
+    <!---------- Product Content ---------->
+    <div class="product-info">
+      <div class="product-head">
+        <h2>Derimen</h2>
+        <div class="price">
+          <span class="old-price"><s>17.00</s></span>
+          <span class="current-price"><b>12.99 AZN</b></span>
+        </div>
+
+        <span class="discount">23%
+          <img src="assets/images/icons/down-arrow.png" alt="" />
+        </span>
+      </div>
+
+      <p>
+        Əl çantası, lüks və əl işi dəridən hazırlanmış şık bir aksesuar.
+        İstifadəsi rahat və praktik olan bu çanta, istədiyiniz əşyanızı
+        saxlamaq üçün mükəmməl bir seçimdir. Tərzi və rahatlığı bir arada
+        istəyənlər üçün idealdir.
+      </p>
+    </div>
+    <!---------- Product Form Input ---------->
+    <form action="" method="post">
+      <div class="input-container">
+        <textarea rows="4" placeholder="Məhsulun üzərinə yazdırmaq istədiyiniz yazını bura qeyd edin"></textarea>
+      </div>
+
+      <div class="input-container print-img">
+        <input type="file" accept="image/*" id="imageInput" name="image" style="display: none" />
+        <label for="imageInput" class="image-button text-center">
+          Məhsulun üzərinə çap etdirmək istədiyiniz şəkli bura daxil edin
+        </label>
+        <img style="width: 100%" src="" class="image-preview" />
+        <span class="change-image" style="display: none">
+          <a class="change-image primary-color" style="margin-top: 10px; text-align: end">Təmizlə</a>
+        </span>
+      </div>
+
+      <div class="input-container">
+        <select name="product_address" id="product_address">
+          <option value="">Çatdırılma ünvanını seçin</option>
+        </select>
+      </div>
+
+      <input type="submit" class="btn-success" value="Sifarişi göndər" />
+    </form>
+
+
+
+  </div>
+
+
+
+  <!--jQuery CDN-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <!-- Swiper CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
+
+  <script>
+    //Swiper
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: "auto",
+      centeredSlides: true,
+      spaceBetween: 10,
+      loop: true,
+    });
+  </script>
+
+  <script>
+    $("#imageInput").on("change", function () {
+      $input = $(this);
+      if ($input.val().length > 0) {
+        fileReader = new FileReader();
+        fileReader.onload = function (data) {
+          $(".image-preview").attr("src", data.target.result);
+        };
+        fileReader.readAsDataURL($input.prop("files")[0]);
+        $(".image-button").css("display", "none");
+        $(".image-preview").css("display", "block");
+        $(".change-image").css("display", "block");
+      }
+    });
+
+    $(".change-image").on("click", function () {
+      $control = $(this);
+      $("#imageInput").val("");
+      $preview = $(".image-preview");
+      $preview.attr("src", "");
+      $preview.css("display", "none");
+      $control.css("display", "none");
+      $(".image-button").css("display", "block");
+    });
+  </script>
+</body>
+
 </html>
