--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="main-top">
         <img
           class="main-logo"
-          src="images/logo/page 2/djeen logo.png"
+          src="assets/images/"
           alt="logo"
         />
         <p>Axtardığını <span class="primary-color">djeen</span>dən arzula</p>
