--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
                             alt=""></span>
                 </div>
 
-                <a href="#" class="order-btn">Sifarişə keç</a>
+                <a href="product-detail.html" class="order-btn">Sifarişə keç</a>
             </div>
 
             <div class="product-card">
@@ -132,7 +132,7 @@
                             alt=""></span>
                 </div>
 
-                <a href="#" class="order-btn">Sifarişə keç</a>
+                <a href="product-detail.html" class="order-btn">Sifarişə keç</a>
             </div>
 
             <div class="product-card">
@@ -165,7 +165,7 @@
                             alt=""></span>
                 </div>
 
-                <a href="#" class="order-btn">Sifarişə keç</a>
+                <a href="product-detail.html" class="order-btn">Sifarişə keç</a>
             </div>
 
             <div class="product-card">
@@ -198,7 +198,7 @@
                             alt=""></span>
                 </div>
 
-                <a href="#" class="order-btn">Sifarişə keç</a>
+                <a href="product-detail.html" class="order-btn">Sifarişə keç</a>
             </div>
 
 
