--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               >.
             </p>
 
-            <input class="btn-light" type="submit" value="Təsdiqlə" />
+            <a class="btn-light" href="3d-verify.html" type="submit">Daxil ol</a>
           </form>
         </div>
       </div>
