--- a/3d-verify.html
+++ b/3d-verify.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="az">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Djeen Web App</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
@@ -12,7 +12,7 @@
 <body>
 
     <div class="otp-main">
-        
+
         <div class="otp-content">
             <div class="otp-header">
                 <h2>
@@ -20,25 +20,57 @@
                 </h2>
             </div>
 
-            <form action="" method="post">
+            <form action="" method="get" class="digit-group otp-inputs" data-group-name="digits" data-autosubmit="false"
+                autocomplete="off">
 
+                <input type="number" id="codeBox1" maxlength="1" max="9" onkeyup="onKeyUpEvent(1, event)" onfocus="onFocusEvent(1)"
+                    class="otp-error-bottom">
+                <input type="number" id="codeBox2" maxlength="1" max="9" onkeyup="onKeyUpEvent(2, event)" onfocus="onFocusEvent(2)"
+                    class="otp-error-top">
+                <input type="number" id="codeBox3" maxlength="1" max="9" onkeyup="onKeyUpEvent(3, event)" onfocus="onFocusEvent(3)"
+                    class="otp-error-bottom">
+                <input type="number" id="codeBox4" maxlength="1" max="9" onkeyup="onKeyUpEvent(4, event)" onfocus="onFocusEvent(4)"
+                    class="otp-without-error">
 
-                <div class="otp-inputs">
-                    <input type="number" maxlength="1" class="otp-error-bottom">
-                    <input type="number" maxlength="1" class="otp-error-top">
-                    <input type="number" maxlength="1" class="otp-error-bottom">
-                    <input type="number" maxlength="1" class="otp-without-error">
+                <!-- Defolt olaraq  class="otp-without-error" görsənəcək. xəta olarsa class="otp-error-bottom" görsənəcək. -->
 
-                    <!-- Defolt olaraq  class="otp-without-error" görsənəcək. xəta olarsa class="otp-error-bottom" görsənəcək. -->
-                </div>
-
-
-                <input class="btn-light otp-submit" type="submit" value="Təsdiqlə">
+                <a class="btn-light otp-submit" type="submit" href="home.html">Təsdiqlə</a>
 
             </form>
         </div>
 
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        function getCodeBoxElement(index) {
+            return document.getElementById('codeBox' + index);
+        }
+        function onKeyUpEvent(index, event) {
+            const eventCode = event.which || event.keyCode;
+            if (getCodeBoxElement(index).value.length === 1) {
+                if (index !== 4) {
+                    getCodeBoxElement(index + 1).focus();
+                } else {
+                    getCodeBoxElement(index).blur();
+                    // Submit code
+                    console.log('submit code ');
+                }
+            }
+            if (eventCode === 8 && index !== 1) {
+                getCodeBoxElement(index - 1).focus();
+            }
+        }
+        function onFocusEvent(index) {
+            for (item = 1; item < index; item++) {
+                const currentElement = getCodeBoxElement(item);
+                if (!currentElement.value) {
+                    currentElement.focus();
+                    break;
+                }
+            }
+        }
+    </script>
 
 </body>
 
